@@ -135,7 +135,7 @@ void RKHTMLWindow::initActions () {
 
 	print = actionCollection ()->addAction (KStandardAction::Print, "print_html", this, SLOT (slotPrint()));
 
-	run_selection = RKStandardActions::runSelection (this, this, SLOT (runSelection()));
+	run_selection = RKStandardActions::runCurrent (this, this, SLOT (runSelection()));
 
 		// needed to enable / disable the run selection action
 	connect (khtmlpart, SIGNAL (selectionChanged()), this, SLOT (selectionChanged()));
